# colvec

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
colvec/: Cargo.toml  README.md
colvec-derive/: Cargo.toml  README.md
colvec-derive/src/: lib.rs
colvec-derive/src/snapshots/: colvec_derive__tests__snapshot_test1.snap  colvec_derive__tests__snapshot_test_zst.snap
colvec/src/: alloc.rs  colvec.rs  error.rs  fields.rs  lib.rs  main.rs  raw.rs  slice.rs
tests/test-nightly_off-std_off/: Cargo.toml
tests/test-nightly_off-std_on/: Cargo.toml
tests/test-nightly_on-std_off/: Cargo.toml
tests/test-nightly_on-std_off/src/: main.rs
tests/test-nightly_on-std_on/: Cargo.toml
