[package]
name = "colvec-derive"
version = "0.0.2"
edition = "2024"
repository = "https://github.com/krakow10/colvec"
license = "MIT OR Apache-2.0"
description = "Derive macros for colvec."
authors = ["Rhys Lloyd <krakow20@gmail.com>"]
keywords = ["struct", "arrays", "vec", "allocator-api2"]

[lib]
proc-macro=true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.106", features = ["full"] }

[features]
std = []

[dev-dependencies]
insta = "1.43.1"
prettyplease = "0.2.37"
proc-macro2 = "1.0.97"
