[package]
name = "colvec"
version = "0.0.2"
edition = "2024"
repository = "https://github.com/krakow10/colvec"
license = "MIT OR Apache-2.0"
description = "Struct-of-arrays column vec like Zig's MultiArrayList"
authors = ["Rhys Lloyd <krakow20@gmail.com>"]
keywords = ["struct", "arrays", "vec", "allocator-api2"]

[dependencies]
allocator-api2 = { version = "0.3.0", default-features = false, optional = true }
colvec-derive = { version = "0.0.2", path = "../colvec-derive" }
compile_time_sort = "1.1.4"

[features]
default = ["std","allocator-api2"]
# does this implicitly enable allocator-api2 dependency?
std = ["allocator-api2?/std","colvec-derive/std"]

# mutually exclusive
nightly = []
allocator-api2 = ["dep:allocator-api2"]
