[package]
name = "colvec"
version.workspace = true
edition = "2024"
repository = "https://github.com/krakow10/colvec"
license = "MIT OR Apache-2.0"
description = "Struct-of-arrays column vec like Zig's MultiArrayList"
authors = ["Rhys Lloyd <krakow20@gmail.com>"]
keywords = ["struct", "arrays", "vec", "no_std"]

[dependencies]
allocator-api2 = { version = "0.3.0", default-features = false, optional = true }
colvec-derive = { workspace = true }
compile_time_sort = "1.1.4"

[features]
default = ["std","allocator-api2"]
std = ["allocator-api2?/std","colvec-derive/std"]

# pick one
nightly = []
allocator-api2 = ["dep:allocator-api2"]
