[package]
name = "test-nightly_on-std_on"
version = "0.1.0"
edition = "2024"

[dependencies]
colvec = { path = "../../colvec", default-features = false }

[features]
default = ["nightly","std"]
std = ["colvec/std"]
nightly = ["colvec/nightly"]
allocator-api2 = ["colvec/allocator-api2"]

[workspace]
